# drg-server-list

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  sqlx-data.json
migrations/: 20220321202120_init.down.sql  20220321202120_init.up.sql  20220322185048_add_mod_raw_metadata.down.sql  20220322185048_add_mod_raw_metadata.up.sql  20220416034358_discord_integration.down.sql  20220416034358_discord_integration.up.sql
src/: discord.rs  main.rs  poll.rs  www.rs
