[package]
name = "server-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5.13", features = [  "runtime-tokio-rustls", "sqlite", "json" ] }
reqwest = { version = "0.11.10", features = [ "json" ] }
serde_json = { version = "1.0.79", features = [ "raw_value" ] }
serde = { version = "1.0.136", features = ["derive"] }
dotenv = "0.15.0"
trillium-tokio = "0.2.1"
trillium = "0.2.2"
maud = "0.23.0"
trillium-static-compiled = "0.5.0"
trillium-router = "0.3.2"
trillium-logger = "0.4.0"
anyhow = { version = "1.0.56", features = [ "backtrace" ] }
clap = "3.1.6"
lazy_static = "1.4.0"
regex = "1.5.5"
