[package]
name = "drg-server-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "sqlite", "json" ] }
reqwest = { version = "0.11.20", features = [ "json" ] }
serde_json = { version = "1.0.107", features = [ "raw_value" ] }
serde = { version = "1.0.188", features = ["derive"] }
dotenv = "0.15.0"
trillium-tokio = "0.3.2"
trillium = "0.2.9"
maud = "0.25.0"
trillium-static-compiled = "0.5.0"
trillium-router = "0.3.5"
trillium-logger = "0.4.3"
anyhow = { version = "1.0.75", features = [ "backtrace" ] }
clap = { version = "4.4.6", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.6"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
